--- a/projects.tex
+++ b/projects.tex
@@ -1,60 +1,60 @@
 \begin{scriptsize}
 \setlength\LTleft{0pt}            % default: \fill
 \setlength\LTright{0pt}           % default: \fill
-\begin{longtable}{@{\extracolsep{\fill}}lllllll@{}}
-\label{table:tests}\
+\begin{longtable}{@{\extracolsep{\fill}}lllllllllll@{}}
+\label{table:tests}\\
 \hline
-K & max set size & distribution & BB & & BB-brkga\\ 
+K & max set size & distribution & BB & & BB-brkga & & brkga & & PLI\\ 
 \hline
-& & & $incubent$ & time & $incubent$ & time \\ 
+& & & incubent & time & incubent & time & incubent & time & incubent & time\\ 
 \hline
 \endfirsthead
 \hline
-K & max set size & distribution & BB & & BB-brkga\\ 
+K & max set size & distribution & BB & & BB-brkga & & brkga & & PLI\\ 
 \hline
-& & & $incubent$ & time & $incubent$ & time \\ 
+& & & incubent & time & incubent & time & incubent & time & incubent & time\\ 
 \hline
 \endhead
 \hline \multicolumn{5}{r}{{Continue next page...}} \\ 
 \endfoot
 \multicolumn{5}{r}{{}} \\ 
 \endlastfoot
- 5 & 10 & normal& 1026& 0.00s& 1026& 0.00s \\
- 5 & 30 & normal& 1033& 0.02s& 1033& 0.01s \\
- 5 & 50 & normal& 1028& 0.02s& 1028& 0.03s \\
- 10 & 10 & normal& 4567& 0.05s& 4567& 0.05s \\
- 10 & 30 & normal& 4589& 334s & 4589& 295s \\
- 10 & 50 & normal& 4593& 3600s& 4593& 3600s\\
- 20 & 10 & normal& 19171& 2120s & 19171& 1523s \\
- 20 & 30 & normal& 19161& 3600s& 19248& 3600s\\
- 20 & 50 & normal& 19175& 3600s& 19242& 3600s\\
- 30 & 10 & normal& 43722& 3600s& 43824& 3600s\\
- 30 & 30 & normal& 43746& 3600s& 43927& 3600s\\
- 30 & 50 & normal& 43743& 3600s& 43939& 3600s\\
- 5 & 10 & similar& 441& 0.00s& 441& 0.00s \\
- 5 & 30 & similar& 465& 0.03s& 465& 0.02s \\
- 5 & 50 & similar& 478& 0.06s& 478& 0.05s \\
- 10 & 10 & similar& 1737& 8.84s& 1737& 8.42s \\
- 10 & 30 & similar& 1834& 3600s& 1834& 3600s\\
- 10 & 50 & similar& 1852& 3600s& 1852& 3600s\\
- 20 & 10 & similar& 6223& 3600s& 6481& 3600s\\
- 20 & 30 & similar& 6232& 3600s& 6748& 3600s\\
- 20 & 50 & similar& 5982& 3600s& 6777& 3600s\\
- 30 & 10 & similar& 13303& 3600s& 14196& 3600s\\
- 30 & 30 & similar& 12896& 3600s& 14390& 3600s\\
- 30 & 50 & similar& 12494& 3600s& 14430& 3600s\\
- 5 & 10 & uniform& 766& 0.00s& 766& 0.00s \\
- 5 & 30 & uniform& 898& 0.01s& 898& 0.01s \\
- 5 & 50 & uniform& 925& 0.03s& 925& 0.01s \\
- 10 & 10 & uniform& 3135& 0.07s& 3135& 0.07s \\
- 10 & 30 & uniform& 3522& 1113s & 3522& 979s \\
- 10 & 50 & uniform& 3413& 20.38s& 3413& 19.57s \\
- 20 & 10 & uniform& 12173& 3600s& 12317& 3600s\\
- 20 & 30 & uniform& 11677& 3600s& 12442& 3600s\\
- 20 & 50 & uniform& 11866& 3600s& 13174& 3600s\\
- 30 & 10 & uniform& 25139& 3600s& 26242& 3600s\\
- 30 & 30 & uniform& 24965& 3600s& 27793& 3600s\\
- 30 & 50 & uniform& 25569& 3600s& 28710& 3600s\\
+ 5 & 10 & normal& 1026*& 0.00s& 1026*& 0.00s & 1026& 0.20s & 1026*& 0.38s \\
+ 5 & 30 & normal& 1033*& 0.02s& 1033*& 0.01s & 1033& 0.59s & 1033& 3600s\\
+ 5 & 50 & normal& 1028*& 0.02s& 1028*& 0.03s & 1028& 0.79s & 1028& 3600s\\
+ 10 & 10 & normal& 4567*& 0.05s& 4567*& 0.05s & 4567& 0.32s & 4567*& 226s \\
+ 10 & 30 & normal& 4589*& 334s & 4589*& 295s & 4588& 0.89s & 4564& 3600s\\
+ 10 & 50 & normal& 4593& 3600s& 4593& 3600s& 4587& 1.16s & 4554& 3600s\\
+ 20 & 10 & normal& 19171*& 2120s & 19171*& 1523s & 19171& 0.58s & 19129& 3600s\\
+ 20 & 30 & normal& 19161& 3600s& 19248& 3600s& 19248& 1.72s & 19135& 3600s\\
+ 20 & 50 & normal& 19175& 3600s& 19242& 3600s& 19242& 2.70s & 0*& 3591s \\
+ 30 & 10 & normal& 43722& 3600s& 43824& 3600s& 43824& 1.03s & 43636& 3600s\\
+ 30 & 30 & normal& 43746& 3600s& 43927& 3600s& 43927& 2.64s & 13615*& 3072s \\
+ 30 & 50 & normal& 43743& 3600s& 43939& 3600s& 43939& 4.20s & 15355& 3600s\\
+ 5 & 10 & similar& 441*& 0.00s& 441*& 0.00s & 441& 0.29s & 441*& 14.86s \\
+ 5 & 30 & similar& 465*& 0.03s& 465*& 0.02s & 465& 0.78s & 440& 3600s\\
+ 5 & 50 & similar& 478*& 0.06s& 478*& 0.05s & 470& 1.23s & 450& 3600s\\
+ 10 & 10 & similar& 1737*& 8.84s& 1737*& 8.42s & 1737& 0.55s & 1665& 3600s\\
+ 10 & 30 & similar& 1834& 3600s& 1834& 3600s& 1823& 1.50s & 1385& 3600s\\
+ 10 & 50 & similar& 1852& 3600s& 1852& 3600s& 1836& 2.47s & 609& 3600s\\
+ 20 & 10 & similar& 6223& 3600s& 6481& 3600s& 6481& 1.10s & 5600& 3600s\\
+ 20 & 30 & similar& 6232& 3600s& 6748& 3600s& 6748& 3.07s & 4758& 3600s\\
+ 20 & 50 & similar& 5982& 3600s& 6777& 3600s& 6777& 5.06s & 490& 3600s\\
+ 30 & 10 & similar& 13303& 3600s& 14196& 3600s& 14196& 1.68s & 12048& 3600s\\
+ 30 & 30 & similar& 12896& 3600s& 14390& 3600s& 14390& 4.70s & 368& 3600s\\
+ 30 & 50 & similar& 12494& 3600s& 14430& 3600s& 14430& 7.79s & 40& 3600s\\
+ 5 & 10 & uniform& 766*& 0.00s& 766*& 0.00s & 766& 0.17s & 766*& 0.27s \\
+ 5 & 30 & uniform& 898*& 0.01s& 898*& 0.01s & 898& 0.45s & 898*& 138s \\
+ 5 & 50 & uniform& 925*& 0.03s& 925*& 0.01s & 907& 0.68s & 925& 3600s\\
+ 10 & 10 & uniform& 3135*& 0.07s& 3135*& 0.07s & 3135& 0.29s & 3135*& 20.54s \\
+ 10 & 30 & uniform& 3522*& 1113s & 3522*& 979s & 3508& 1.00s & 3146& 3600s\\
+ 10 & 50 & uniform& 3413*& 20.38s& 3413*& 19.57s & 3364& 1.08s & 3096& 3600s\\
+ 20 & 10 & uniform& 12173& 3600s& 12317& 3600s& 12317& 0.69s & 11948& 3600s\\
+ 20 & 30 & uniform& 11677& 3600s& 12442& 3600s& 12442& 1.24s & 11020& 3600s\\
+ 20 & 50 & uniform& 11866& 3600s& 13174& 3600s& 13174& 2.42s & 4956& 3600s\\
+ 30 & 10 & uniform& 25139& 3600s& 26242& 3600s& 26242& 0.92s & 24806& 3600s\\
+ 30 & 30 & uniform& 24965& 3600s& 27793& 3600s& 27793& 2.49s & 7975& 3600s\\
+ 30 & 50 & uniform& 25569& 3600s& 28710& 3600s& 28710& 3.93s & 0& 3600s\\
 \hline\\ 
 \caption{Tests results}\\ 
 \end{longtable}
