--- a/projects.tex
+++ b/projects.tex
@@ -27,7 +27,7 @@ K & max set size & distribution & BB & & BB-brkga & & brkga & & PLI\\
  10 & 50 & normal& 4593& 3600s& 4593& 3600s& 4587& 1.16s & 4554& 3600s\\
  20 & 10 & normal& 19171*& 2120s & 19171*& 1523s & 19171& 0.58s & 19129& 3600s\\
  20 & 30 & normal& 19161& 3600s& 19248& 3600s& 19248& 1.72s & 19135& 3600s\\
- 20 & 50 & normal& 19175& 3600s& 19242& 3600s& 19242& 2.70s & 0*& 3591s \\
+ 20 & 50 & normal& 19175& 3600s& 19242& 3600s& 19242& 2.70s & 0& 3600s\\
  30 & 10 & normal& 43722& 3600s& 43824& 3600s& 43824& 1.03s & 43636& 3600s\\
  30 & 30 & normal& 43746& 3600s& 43927& 3600s& 43927& 2.64s & 13615*& 3072s \\
  30 & 50 & normal& 43743& 3600s& 43939& 3600s& 43939& 4.20s & 15355& 3600s\\
