--- a/projects.tex
+++ b/projects.tex
@@ -4,13 +4,13 @@
 \label{table:tests}
 \begin{longtable}{@{\extracolsep{\fill}}l|l|l|ll|ll|lll@{}}
 \hline
-K & Max set size & Type & BB & & brkga & & & PLI\\ 
+\textbf{K} & \textbf{Max set size} & \textbf{Type} & \textbf{BB} & & \textbf{brkga} & & \textbf{PLI}\\ 
 \hline
 & & & incubent & time & incubent & time & incubent & time & gap \%\\ 
 \hline
 \endfirsthead
 \hline
-K & Max set size & Type & BB & & brkga & & PLI\\ 
+\textbf{K} & \textbf{Max set size} & \textbf{Type} & \textbf{BB} & & \textbf{brkga} & & \textbf{PLI}\\ 
 \hline
 & & & incubent & time & incubent & time & incubent & time & gap \%\\ 
 \hline
