--- a/projects.tex
+++ b/projects.tex
@@ -4,56 +4,56 @@
 \label{table:tests}
 \begin{longtable}{@{\extracolsep{\fill}}l|l|l|ll|ll|lll@{}}
 \hline
-\textbf{K} & \textbf{Max set size} & \textbf{Type} & \textbf{BB} & & \textbf{brkga} & & \textbf{PLI}\\ 
+\textbf{K} & \textbf{Max set size} & \textbf{Type} & \textbf{BB} & & \textbf{brkga} & & & \textbf{PLI}\\ 
 \hline
 & & & incubent & time & incubent & time & incubent & time & gap \%\\ 
 \hline
 \endfirsthead
 \hline
-\textbf{K} & \textbf{Max set size} & \textbf{Type} & \textbf{BB} & & \textbf{brkga} & & \textbf{PLI}\\ 
+\textbf{K} & \textbf{Max set size} & \textbf{Type} & \textbf{BB} & & \textbf{brkga} & & & \textbf{PLI}\\ 
 \hline
 & & & incubent & time & incubent & time & incubent & time & gap \%\\ 
 \hline
 \endhead
-\hline \multicolumn{5}{r}{{Continue next page...}} \\ 
+\hline \multicolumn{10}{r}{{Continue next page...}} \\ 
 \endfoot
-\multicolumn{5}{r}{{}} \\ 
+\multicolumn{10}{r}{{}} \\ 
 \endlastfoot
- 5 & 10 & normal& 1026*& 0.00s& 1026& 0.20s & 1026*& 0.38s & 0.00\% \\
- 5 & 30 & normal& 1033*& 0.02s& 1033& 0.59s & 1033& 3600s& 312\% \\
- 5 & 50 & normal& 1028*& 0.02s& 1028& 0.79s & 1028& 3600s& 471\% \\
- 10 & 10 & normal& 4567*& 0.05s& 4567& 0.32s & 4567*& 226s & 0.00\% \\
- 10 & 30 & normal& 4589*& 334s & 4588& 0.89s & 4564& 3600s& 729\% \\
- 10 & 50 & normal& 4593& 3600s& 4587& 1.16s & 4554& 3600s& 1477\% \\
- 20 & 10 & normal& 19171*& 2120s & 19171& 0.58s & 19129& 3600s& 8.35\% \\
- 20 & 30 & normal& 19161& 3600s& 19248& 1.72s & 19135& 3600s& 973\% \\
+ 5 & 10 & normal& 1026*& 0.00s& 1026& 0.20s & 1026*& 0.38s & 0.00 \\
+ 5 & 30 & normal& 1033*& 0.02s& 1033& 0.59s & 1033& 3600s& 312 \\
+ 5 & 50 & normal& 1028*& 0.02s& 1028& 0.79s & 1028& 3600s& 471 \\
+ 10 & 10 & normal& 4567*& 0.05s& 4567& 0.32s & 4567*& 225s & 0.00 \\
+ 10 & 30 & normal& 4589*& 334s & 4588& 0.89s & 4564& 3600s& 729 \\
+ 10 & 50 & normal& 4593& 3600s& 4587& 1.16s & 4554& 3600s& 1477 \\
+ 20 & 10 & normal& 19171*& 2120s & 19171& 0.58s & 19129& 3600s& 8.35 \\
+ 20 & 30 & normal& 19161& 3600s& 19248& 1.72s & 19135& 3600s& 973 \\
  20 & 50 & normal& 19175& 3600s& 19242& 2.70s & 0& 3600s& -- \\
- 30 & 10 & normal& 43722& 3600s& 43824& 1.03s & 43636& 3600s& 221\% \\
- 30 & 30 & normal& 43746& 3600s& 43927& 2.64s & 13615*& 3072s & 3543\% \\
- 30 & 50 & normal& 43743& 3600s& 43939& 4.20s & 15355& 3600s& 5050\% \\
- 5 & 10 & similar& 441*& 0.00s& 441& 0.29s & 441*& 14.86s & 0.00\% \\
- 5 & 30 & similar& 465*& 0.03s& 465& 0.78s & 440& 3600s& 985\% \\
- 5 & 50 & similar& 478*& 0.06s& 470& 1.23s & 450& 3600s& 2630\% \\
- 10 & 10 & similar& 1737*& 8.84s& 1737& 0.55s & 1665& 3600s& 196\% \\
- 10 & 30 & similar& 1834& 3600s& 1823& 1.50s & 1385& 3600s& 2288\% \\
- 10 & 50 & similar& 1852& 3600s& 1836& 2.47s & 609& 3600s& 9236\% \\
- 20 & 10 & similar& 6223& 3600s& 6481& 1.10s & 5600& 3600s& 712\% \\
- 20 & 30 & similar& 6232& 3600s& 6748& 3.07s & 4758& 3600s& 2950\% \\
- 20 & 50 & similar& 5982& 3600s& 6777& 5.06s & 490& 3600s& 49300\% \\
- 30 & 10 & similar& 13303& 3600s& 14196& 1.68s & 12048& 3600s& 798\% \\
- 30 & 30 & similar& 12896& 3600s& 14390& 4.70s & 368& 3600s& 90327\% \\
- 30 & 50 & similar& 12494& 3600s& 14430& 7.79s & 40& 3600s& 1386877\% \\
- 5 & 10 & uniform& 766*& 0.00s& 766& 0.17s & 766*& 0.27s & 0.00\% \\
- 5 & 30 & uniform& 898*& 0.01s& 898& 0.45s & 898*& 138s & 0.00\% \\
- 5 & 50 & uniform& 925*& 0.03s& 907& 0.68s & 925& 3600s& 228\% \\
- 10 & 10 & uniform& 3135*& 0.07s& 3135& 0.29s & 3135*& 20.54s & 0.00\% \\
- 10 & 30 & uniform& 3522*& 1113s & 3508& 1.00s & 3146& 3600s& 816\% \\
- 10 & 50 & uniform& 3413*& 20.38s& 3364& 1.08s & 3096& 3600s& 602\% \\
- 20 & 10 & uniform& 12173& 3600s& 12317& 0.69s & 11948& 3600s& 91.70\% \\
- 20 & 30 & uniform& 11677& 3600s& 12442& 1.24s & 11020& 3600s& 466\% \\
- 20 & 50 & uniform& 11866& 3600s& 13174& 2.42s & 4956& 3600s& 2828\% \\
- 30 & 10 & uniform& 25139& 3600s& 26242& 0.92s & 24806& 3600s& 109\% \\
- 30 & 30 & uniform& 24965& 3600s& 27793& 2.49s & 7975& 3600s& 2733\% \\
+ 30 & 10 & normal& 43722& 3600s& 43824& 1.03s & 43636& 3600s& 221 \\
+ 30 & 30 & normal& 43746& 3600s& 43927& 2.64s & 13615& 3600s& 3543 \\
+ 30 & 50 & normal& 43743& 3600s& 43939& 4.20s & 15355& 3600s& 5050 \\
+ 5 & 10 & similar& 441*& 0.00s& 441& 0.29s & 441*& 14.86s & 0.00 \\
+ 5 & 30 & similar& 465*& 0.03s& 465& 0.78s & 440& 3600s& 985 \\
+ 5 & 50 & similar& 478*& 0.06s& 470& 1.23s & 450& 3600s& 2630 \\
+ 10 & 10 & similar& 1737*& 8.84s& 1737& 0.55s & 1665& 3600s& 196 \\
+ 10 & 30 & similar& 1834& 3600s& 1823& 1.50s & 1385& 3600s& 2288 \\
+ 10 & 50 & similar& 1852& 3600s& 1836& 2.47s & 609& 3600s& 9236 \\
+ 20 & 10 & similar& 6223& 3600s& 6481& 1.10s & 5600& 3600s& 712 \\
+ 20 & 30 & similar& 6232& 3600s& 6748& 3.07s & 4758& 3600s& 2950 \\
+ 20 & 50 & similar& 5982& 3600s& 6777& 5.06s & 490& 3600s& 49300 \\
+ 30 & 10 & similar& 13303& 3600s& 14196& 1.68s & 12048& 3600s& 798 \\
+ 30 & 30 & similar& 12896& 3600s& 14390& 4.70s & 368& 3600s& 90327 \\
+ 30 & 50 & similar& 12494& 3600s& 14430& 7.79s & 40& 3600s& 1386877 \\
+ 5 & 10 & uniform& 766*& 0.00s& 766& 0.17s & 766*& 0.27s & 0.00 \\
+ 5 & 30 & uniform& 898*& 0.01s& 898& 0.45s & 898*& 137s & 0.00 \\
+ 5 & 50 & uniform& 925*& 0.03s& 907& 0.68s & 925& 3600s& 228 \\
+ 10 & 10 & uniform& 3135*& 0.07s& 3135& 0.29s & 3135*& 20.54s & 0.00 \\
+ 10 & 30 & uniform& 3522*& 1112s & 3508& 1.00s & 3146& 3600s& 816 \\
+ 10 & 50 & uniform& 3413*& 20.38s& 3364& 1.08s & 3096& 3600s& 602 \\
+ 20 & 10 & uniform& 12173& 3600s& 12317& 0.69s & 11948& 3600s& 91.70 \\
+ 20 & 30 & uniform& 11677& 3600s& 12442& 1.24s & 11020& 3600s& 466 \\
+ 20 & 50 & uniform& 11866& 3600s& 13174& 2.42s & 4956& 3600s& 2828 \\
+ 30 & 10 & uniform& 25139& 3600s& 26242& 0.92s & 24806& 3600s& 109 \\
+ 30 & 30 & uniform& 24965& 3600s& 27793& 2.49s & 7975& 3600s& 2733 \\
  30 & 50 & uniform& 25569& 3600s& 28710& 3.93s & 0& 3600s& -- \\
 \hline 
 \caption{Tests results}\\ 
