--- a/projects.tex
+++ b/projects.tex
@@ -19,42 +19,42 @@
 \endfoot
 \multicolumn{10}{r}{{}} \\ 
 \endlastfoot
- 5 & 10 & normal& 1026*& 0.00s& 1026& 0.20s & 1026*& 0.38s & 0.00 \\
- 5 & 30 & normal& 1033*& 0.02s& 1033& 0.59s & 1033& 3600s& 312 \\
- 5 & 50 & normal& 1028*& 0.02s& 1028& 0.79s & 1028& 3600s& 471 \\
- 10 & 10 & normal& 4567*& 0.05s& 4567& 0.32s & 4567*& 225s & 0.00 \\
- 10 & 30 & normal& 4589*& 334s & 4588& 0.89s & 4564& 3600s& 729 \\
- 10 & 50 & normal& 4593& 3600s& 4587& 1.16s & 4554& 3600s& 1477 \\
- 20 & 10 & normal& 19171*& 2120s & 19171& 0.58s & 19129& 3600s& 8.35 \\
- 20 & 30 & normal& 19161& 3600s& 19248& 1.72s & 19135& 3600s& 973 \\
- 20 & 50 & normal& 19175& 3600s& 19242& 2.70s & 0& 3600s& -- \\
- 30 & 10 & normal& 43722& 3600s& 43824& 1.03s & 43636& 3600s& 221 \\
- 30 & 30 & normal& 43746& 3600s& 43927& 2.64s & 13615& 3600s& 3543 \\
- 30 & 50 & normal& 43743& 3600s& 43939& 4.20s & 15355& 3600s& 5050 \\
- 5 & 10 & similar& 441*& 0.00s& 441& 0.29s & 441*& 14.86s & 0.00 \\
- 5 & 30 & similar& 465*& 0.03s& 465& 0.78s & 440& 3600s& 985 \\
- 5 & 50 & similar& 478*& 0.06s& 470& 1.23s & 450& 3600s& 2630 \\
- 10 & 10 & similar& 1737*& 8.84s& 1737& 0.55s & 1665& 3600s& 196 \\
- 10 & 30 & similar& 1834& 3600s& 1823& 1.50s & 1385& 3600s& 2288 \\
- 10 & 50 & similar& 1852& 3600s& 1836& 2.47s & 609& 3600s& 9236 \\
- 20 & 10 & similar& 6223& 3600s& 6481& 1.10s & 5600& 3600s& 712 \\
- 20 & 30 & similar& 6232& 3600s& 6748& 3.07s & 4758& 3600s& 2950 \\
- 20 & 50 & similar& 5982& 3600s& 6777& 5.06s & 490& 3600s& 49300 \\
- 30 & 10 & similar& 13303& 3600s& 14196& 1.68s & 12048& 3600s& 798 \\
- 30 & 30 & similar& 12896& 3600s& 14390& 4.70s & 368& 3600s& 90327 \\
- 30 & 50 & similar& 12494& 3600s& 14430& 7.79s & 40& 3600s& 1386877 \\
- 5 & 10 & uniform& 766*& 0.00s& 766& 0.17s & 766*& 0.27s & 0.00 \\
- 5 & 30 & uniform& 898*& 0.01s& 898& 0.45s & 898*& 137s & 0.00 \\
- 5 & 50 & uniform& 925*& 0.03s& 907& 0.68s & 925& 3600s& 228 \\
- 10 & 10 & uniform& 3135*& 0.07s& 3135& 0.29s & 3135*& 20.54s & 0.00 \\
- 10 & 30 & uniform& 3522*& 1112s & 3508& 1.00s & 3146& 3600s& 816 \\
- 10 & 50 & uniform& 3413*& 20.38s& 3364& 1.08s & 3096& 3600s& 602 \\
- 20 & 10 & uniform& 12173& 3600s& 12317& 0.69s & 11948& 3600s& 91.70 \\
- 20 & 30 & uniform& 11677& 3600s& 12442& 1.24s & 11020& 3600s& 466 \\
- 20 & 50 & uniform& 11866& 3600s& 13174& 2.42s & 4956& 3600s& 2828 \\
- 30 & 10 & uniform& 25139& 3600s& 26242& 0.92s & 24806& 3600s& 109 \\
- 30 & 30 & uniform& 24965& 3600s& 27793& 2.49s & 7975& 3600s& 2733 \\
- 30 & 50 & uniform& 25569& 3600s& 28710& 3.93s & 0& 3600s& -- \\
+ 5 & 10 & normal& \textbf{1026*}& 0.00s& \textbf{1026}& 0.60s & \textbf{1026*}& 0.45s & 0.00 \\
+ 5 & 30 & normal& \textbf{1033*}& 0.02s& \textbf{1033}& 1.38s & \textbf{1033}& 3600s& 182 \\
+ 5 & 50 & normal& \textbf{1028*}& 0.02s& \textbf{1028}& 1.83s & \textbf{1028}& 3600s& 687 \\
+ 10 & 10 & normal& \textbf{4567*}& 0.05s& \textbf{4567}& 0.76s & \textbf{4567*}& 324s & 0.00 \\
+ 10 & 30 & normal& \textbf{4589*}& 334s & 4586& 2.09s & 4567& 3600s& 835 \\
+ 10 & 50 & normal& 4593& 3600s& \textbf{4593}& 2.66s & 4568& 3600s& 1427 \\
+ 20 & 10 & normal& \textbf{19171*}& 2120s & \textbf{19171}& 1.38s & 19149& 3600s& 5.99 \\
+ 20 & 30 & normal& 19161& 3600s& \textbf{19234}& 5.35s & 19143& 3600s& 975 \\
+ 20 & 50 & normal& 19175& 3600s& \textbf{19261}& 8.37s & 19097& 3600s& 1492 \\
+ 30 & 10 & normal& 43722& 3600s& \textbf{43829}& 2.40s & 43711& 3600s& 212 \\
+ 30 & 30 & normal& 43746& 3600s& \textbf{43937}& 8.15s & 43672& 3600s& 1022 \\
+ 30 & 50 & normal& 43743& 3600s& \textbf{43978}& 12.97s & 43625& 3600s& 1709 \\
+ 5 & 10 & similar& \textbf{441*}& 0.00s& \textbf{441}& 0.70s & \textbf{441*}& 14.63s & 0.00 \\
+ 5 & 30 & similar& \textbf{465*}& 0.03s& 458& 1.80s & 449& 3600s& 981 \\
+ 5 & 50 & similar& \textbf{478*}& 0.06s& 450& 2.83s & 459& 3600s& 2544 \\
+ 10 & 10 & similar& \textbf{1737*}& 8.84s& \textbf{1737}& 1.32s & 1719& 3600s& 185 \\
+ 10 & 30 & similar& 1834& 3600s& 1758& 4.75s & 1562& 3600s& 2035 \\
+ 10 & 50 & similar& 1852& 3600s& 1801& 7.72s & 1604& 3600s& 3448 \\
+ 20 & 10 & similar& 6223& 3600s& \textbf{6589}& 2.54s & 5750& 3600s& 692 \\
+ 20 & 30 & similar& 6232& 3600s& \textbf{6898}& 9.53s & 5719& 3600s& 2439 \\
+ 20 & 50 & similar& 5982& 3600s& \textbf{6895}& 15.61s & 4839& 3600s& 250271 \\
+ 30 & 10 & similar& 13303& 3600s& \textbf{14209}& 5.16s & 12304& 3600s& 780 \\
+ 30 & 30 & similar& 12896& 3600s& \textbf{14627}& 14.47s & 10812& 3600s& 92368 \\
+ 30 & 50 & similar& 12494& 3600s& \textbf{14879}& 23.79s & 11136& 3600s& 248998 \\
+ 5 & 10 & uniform& \textbf{766*}& 0.00s& \textbf{766}& 0.52s & \textbf{766*}& 0.19s & 0.00 \\
+ 5 & 30 & uniform& \textbf{898*}& 0.01s& \textbf{898}& 1.07s & \textbf{898*}& 211s & 0.00 \\
+ 5 & 50 & uniform& \textbf{925*}& 0.03s& \textbf{925}& 1.59s & 903& 3600s& 247 \\
+ 10 & 10 & uniform& \textbf{3135*}& 0.07s& \textbf{3135}& 0.72s & \textbf{3135*}& 27.00s & 0.00 \\
+ 10 & 30 & uniform& \textbf{3522*}& 1112s & 3463& 2.30s & 3188& 3600s& 806 \\
+ 10 & 50 & uniform& \textbf{3413*}& 20.38s& \textbf{3413}& 2.51s & 3358& 3600s& 537 \\
+ 20 & 10 & uniform& 12173& 3600s& \textbf{12317}& 1.58s & 11932& 3600s& 78.50 \\
+ 20 & 30 & uniform& 11677& 3600s& \textbf{12442}& 2.85s & 11458& 3600s& 443 \\
+ 20 & 50 & uniform& 11866& 3600s& \textbf{13411}& 7.50s & 11331& 3600s& 1178 \\
+ 30 & 10 & uniform& 25139& 3600s& \textbf{26242}& 2.13s & 25081& 3600s& 102 \\
+ 30 & 30 & uniform& 24965& 3600s& \textbf{27986}& 7.72s & 23512& 3600s& 860 \\
+ 30 & 50 & uniform& 25569& 3600s& \textbf{28861}& 12.17s & 22265& 3600s& 61946 \\
 \hline 
 \caption{Tests results}\\ 
 \end{longtable}
